// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConversationList renders for case #1 while loading 1`] = `
<div
  className="MuiCircularProgress-root makeStyles-spinner-3 MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
  role="progressbar"
  style={
    Object {
      "height": 40,
      "width": 40,
    }
  }
>
  <svg
    className="MuiCircularProgress-svg"
    viewBox="22 22 44 44"
  >
    <circle
      className="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
      cx={44}
      cy={44}
      fill="none"
      r={20.2}
      strokeWidth={3.6}
      style={Object {}}
    />
  </svg>
</div>
`;

exports[`ConversationList renders for case #1 with conversations 1`] = `
<nav
  className="makeStyles-nav-1"
>
  <ul
    className="MuiList-root MuiList-padding"
  >
    <li>
      <a
        aria-disabled={false}
        className="MuiButtonBase-root MuiListItem-root makeStyles-link-8 MuiListItem-gutters MuiListItem-divider MuiListItem-button"
        href="/messages/convo-id"
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex={0}
      >
        <div
          className="MuiAvatar-root MuiAvatar-circle makeStyles-avatar-9 MuiAvatar-colorDefault"
        >
          B
        </div>
        <p
          className="MuiTypography-root MuiTypography-body1 MuiTypography-colorInherit"
        >
          Bob
        </p>
      </a>
    </li>
    <li>
      <a
        aria-disabled={false}
        className="MuiButtonBase-root MuiListItem-root makeStyles-link-8 MuiListItem-gutters MuiListItem-divider MuiListItem-button"
        href="/messages/convo-id2"
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex={0}
      >
        <div
          className="MuiAvatar-root MuiAvatar-circle makeStyles-avatar-9 MuiAvatar-colorDefault"
        >
          B
        </div>
        <p
          className="MuiTypography-root MuiTypography-body1 MuiTypography-colorInherit"
        >
          Bill
        </p>
      </a>
    </li>
  </ul>
</nav>
`;

exports[`ConversationList renders for case #1 without conversations 1`] = `
<p
  className="MuiTypography-root makeStyles-noConversationText-2 MuiTypography-h6"
>
  Add a conversation below
</p>
`;

exports[`ConversationList renders for case #2 while loading 1`] = `
<div
  className="MuiCircularProgress-root makeStyles-spinner-3 MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
  role="progressbar"
  style={
    Object {
      "height": 40,
      "width": 40,
    }
  }
>
  <svg
    className="MuiCircularProgress-svg"
    viewBox="22 22 44 44"
  >
    <circle
      className="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
      cx={44}
      cy={44}
      fill="none"
      r={20.2}
      strokeWidth={3.6}
      style={Object {}}
    />
  </svg>
</div>
`;

exports[`ConversationList renders for case #2 with conversations 1`] = `
<nav
  className="makeStyles-nav-1"
>
  <ul
    className="MuiList-root MuiList-padding"
  >
    <li>
      <a
        aria-disabled={false}
        className="MuiButtonBase-root MuiListItem-root makeStyles-link-8 MuiListItem-gutters MuiListItem-divider MuiListItem-button Mui-selected"
        href="/messages/convo-id"
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex={0}
      >
        <div
          className="MuiAvatar-root MuiAvatar-circle makeStyles-avatar-9 MuiAvatar-colorDefault"
        >
          B
        </div>
        <p
          className="MuiTypography-root MuiTypography-body1 MuiTypography-colorInherit"
        >
          Bob
        </p>
      </a>
    </li>
    <li>
      <a
        aria-disabled={false}
        className="MuiButtonBase-root MuiListItem-root makeStyles-link-8 MuiListItem-gutters MuiListItem-divider MuiListItem-button"
        href="/messages/convo-id2"
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex={0}
      >
        <div
          className="MuiAvatar-root MuiAvatar-circle makeStyles-avatar-9 MuiAvatar-colorDefault"
        >
          B
        </div>
        <p
          className="MuiTypography-root MuiTypography-body1 MuiTypography-colorInherit"
        >
          Bill
        </p>
      </a>
    </li>
  </ul>
</nav>
`;

exports[`ConversationList renders for case #2 without conversations 1`] = `
<p
  className="MuiTypography-root makeStyles-noConversationText-2 MuiTypography-h6"
>
  Add a conversation below
</p>
`;
